--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tauri-apps/api": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "dayjs": "1.11.13",
+    "posthog-js": "1.234.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "5.5.0",
